--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -14,7 +14,7 @@ $blue: #268bd2 !default;
 $brown: #8f5536 !default;
 
 $root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif !default;
-$root-font-size: 0.75rem !default;
+$root-font-size: 0.5em !default;
 $root-line-height: 1 !default;
 
 /* type scale */
